--- a/tools/templates/blog-deatail-one.html
+++ b/tools/templates/blog-deatail-one.html
@@ -170,36 +170,7 @@
   </div>
   <div class="push"></div>
 </div>
-<footer class="footer container">
-  <div class="footer-inner">
-    <div class="region region-footer">
-      <section id="block-menu-menu-footer-links" class="block block-menu clearfix" data-personalize-entity-id="block/menu-menu-footer-links">
-        <ul class="menu nav">
-          <li class="first leaf"><a href="index">HOME</a></li>
-          <li class="leaf"><a href="aboutus">About us</a></li>
-           <li class="leaf"><a href="#">Products</a></li>
-          <li class="leaf"><a href="solar">Solar</a></li>
-          <li class="leaf"><a href="blogs">Blog</a></li>
-          <li class="leaf"><a href="contactus">Contact us</a></li>
-          
-          
-        </ul>
-      </section>
-    </div>
-    <div class="footer-bottom">
-      <div class="footer-logo"><img alt="Sunrun Logo Footer" src="/static/images/logo footer.png"></div>
-      <div class="footer-middle">
-        <div class="copyright" style="margin-top:33px;">
-          <p>&copy; 2015 Lohia sales. All rights reserved.</p>
-        </div>
-        
-      </div>
-      <div class="footer-right">
-        <div class="footer-social"> <a href="https://www.facebook.com/renovosolar" target="_blank"><i class="fa fa-facebook"></i></a> <a href="https://www.facebook.com/renovosolar" target="_blank"><i class="fa fa-twitter"></i></a> <a href="https://www.youtube.com/user/kshitiz567" target="_blank"><i class="fa fa-youtube"></i></a> <a href="#" target="_blank"><i class="fa fa-google-plus"></i></a></div>
-      </div>
-    </div>
-  </div>
-</footer>
+{% include "footer.html" %}
 </body>
 
 
